--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Website for We Are Us",
   "engines": {
-    "node": "10.15.0",
+    "node": "8.15.0",
     "npm": "6.4.1"
   },
   "main": "index.js",
@@ -23,12 +23,14 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^1.0.1",
     "compression-webpack-plugin": "^2.0.0",
     "contentful": "^7.1.0",
