--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "contentful": "^7.1.0",
     "contentful-redux": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "dotenv-webpack": "^1.7.0",
