--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "NODE_ENV=production webpack",
     "lint": "eslint --ext .ts,.tsx,.js -f stylish .",
     "test": "jest",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --port 3000"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -23,11 +23,14 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/auth0-js": "^8.11.11",
     "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
+    "@types/react-router-dom": "^4.3.1",
+    "auth0-js": "^9.10.0",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
@@ -48,6 +51,7 @@
     "react-dom": "^16.7.0",
     "react-error-boundary": "^1.2.3",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
