--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "creature-features": "^3.1.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
+    "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
