--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/react-router-dom": "^4.3.1",
     "auth0-js": "^9.10.0",
     "babel-loader": "^8.0.5",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^1.0.1",
     "compression-webpack-plugin": "^2.0.0",
@@ -49,17 +49,19 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "prismic-javascript": "^2.0.1",
     "react": "^16.7.0",
     "react-block-image": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-error-boundary": "^1.2.3",
     "react-redux": "^6.0.0",
+    "react-refetch": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.2.4",
+    "typescript": "^3.3.3333",
     "typescript-fsa": "^3.0.0-beta-2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
